add preliminary balance endpoint, more seed data, refactor swagger to include start/end dates for balance query
